2013-06-18  Kenichi Handa  <handa@gnu.org>

	* font.c (Ffont_spec): Signal an error for an invalid font name
	(Bug#14648).

2013-06-18  Paul Eggert  <eggert@cs.ucla.edu>

	Porting fixes for merged specpdl and backtrace stacks (Bug#14643).
	In particular this ports to 32-bit sparc Sun cc.
	* eval.c (init_eval_once, grow_specpdl): Allocate a specbinding
	array with a dummy element at specpdl[-1], so that its address can
	be taken portably.
	(unbind_to): Do not copy the binding; not needed, now that we
	copy old_value in the one place where the copy is needed.
	* fileio.c (Fwrite_region): Use ptrdiff_t, not int, for specpdl count.
	* lisp.h (BITS_PER_PTRDIFF_T): Remove; no longer needed.
	(union specbinding): Rename from struct specbinding.  Redo layout
	to avoid the need for 'ptrdiff_t nargs : BITS_PER_PTRDIFF_T - 1;',
	which is not portable.  With Sun C 5.12 32-bit sparc, the
	declaration causes nargs to be an unsigned bitfield, a behavior
	that the C standard allows; but Emacs wants nargs to be signed.
	The overall type is now a union of structures rather than a
	structure of union of structures, and the 'kind' member is now a
	bitfield, so that the overall type doesn't grow.  All uses changed.
	* process.c (Fmake_serial_process): Remove unnecessary initialization.

2013-06-17  Paul Eggert  <eggert@cs.ucla.edu>

	* frame.c (x_report_frame_params): Cast parent_desc to uintptr_t.
	Needed if HAVE_NTGUI.  Reported by Juanma Barranquero.

	* nsfont.m (ns_registry_to_script): Parenthesize while expression.

2013-06-17  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c (w32_wnd_proc): Don't call WINDOW_HEADER_LINE_HEIGHT
	unless we know that the window w's frame is a frame object.
	Another attempt at solving bug#14062 and bug#14630.

2013-06-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* textprop.c (property_set_type): New enum.
	(add_properties): Allow appending/prepending text properties.
	(add_text_properties_1): Factored out of Fadd_text_properties.